commit al master del blogpost en su verison mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,10 +1,15 @@
 <html>
     <head>
         <title>El Titulo del Post</title>
-        <link rel="stylesheet" href="css/estilos.css"
+        <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
-        <h1>Aqui Vamos Hacer El Blog Post</h1>
-        <p>Parrafo de Incio</p>
+        <div id="Container">
+            <div id="post">
+                <h1>Creación de mi Primer Proyecto Git</h1>
+                <p>Espacion para la eplicacion de la creación de Ramas</p>
+                <p>Damos Inicio a mi Proyecto</p>
+            </div>
+        </div>
     </body>
 </html>
