--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,9 @@
     <body>
         <div id="Container">
             <div id="post">
+            <div id="cabecera">
+                <h1>Inicio de cabecera</h1>
+            </div>
                 <h1>Creación de mi Primer Proyecto Git</h1>
                 <p>Espacion para la eplicacion de la creación de Ramas</p>
                 <p>Damos Inicio a mi Proyecto</p>
