--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,10 @@
         <div id="Container">
             <div id="post">
             <div id="cabecera">
-                <h1>Inicio de cabecera</h1>
+                Inicio de cabecera
+                <span id="tagline">
+                    Blog Personal
+                </span>
             </div>
                 <h1>Creación de mi Primer Proyecto Git</h1>
                 <p>Espacion para la eplicacion de la creación de Ramas</p>
