Agregado contenido adicional y mejoras

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
                 <h1>Creación de mi Primer Proyecto Git</h1>
                 <p>Espacion para la eplicacion de la creación de Ramas</p>
                 <p>Damos Inicio a mi Proyecto</p>
+                <p>Hoy en día, Git es, con diferencia, el sistema de control de versiones moderno más utilizado del mundo. 
+                Git es un proyecto de código abierto maduro y con un mantenimiento activo que desarrolló 
+                originalmente Linus Torvalds, el famoso creador del kernel del sistema operativo Linux, en 2005</p>
             </div>
         </div>
     </body>
