cambio de titulo a post

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>El Titulo del Post</title>
+        <title>cambio titulo del Post</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
